--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
+    "release": "cd android && ./gradlew assembleRelease",
     "devtools": "adb shell input keyevent 82"
   },
   "dependencies": {
