chore: add start:android run script to run android version

--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest",
+    "devtools": "adb shell input keyevent 82",
     "release": "cd android && ./gradlew assembleRelease",
-    "devtools": "adb shell input keyevent 82"
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "start:android": "react-native run-android",
+    "test": "jest"
   },
   "dependencies": {
     "react": "16.4.1",
