--- a/.editorconfig
+++ b/.editorconfig
@@ -3,10 +3,10 @@ root = true
 [*]
 charset = utf-8
 end_of_line = lf
-ident_size = 2
-ident_style = space
+ident_size = 4
+ident_style = tab
 insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.{js,jsx,css,html}]
-indent_size = 2
+indent_size = 4
