chore: update .editorconfig to have json

--- a/.editorconfig
+++ b/.editorconfig
@@ -8,5 +8,5 @@ ident_style = tab
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{js,jsx,css,html}]
+[*.{js,json,jsx,css,html}]
 indent_size = 4
