--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     },
     "devDependencies": {
         "babel-jest": "23.4.2",
-        "babel-preset-react-native": "^5",
+        "babel-preset-react-native": "5.0.2",
         "eslint-plugin-import": "^2.14.0",
         "eslint-plugin-jsx-a11y": "^6.1.1",
         "eslint-plugin-react": "^7.11.1",
@@ -27,9 +27,5 @@
     },
     "jest": {
         "preset": "react-native"
-    },
-    "prettier": {
-        "singleQuote": true,
-        "trailingComma": "es5"
     }
 }
