--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "react": "16.5.0",
     "react-native": "0.57.0",
+    "react-native-firebase": "^4.3.8",
     "react-navigation": "^2.14.0"
   },
   "devDependencies": {
